--- a/app/templates/employee/_punch_state.html
+++ b/app/templates/employee/_punch_state.html
@@ -149,15 +149,7 @@
           <li class="history-feed-item">
             <div class="history-feed-left">
               <span class="history-event-icon {{ 'is-in' if is_in else 'is-out' }}" aria-hidden="true">
-                {% if is_in %}
-                  <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M8.5 6.5L17 12L8.5 17.5V6.5Z"/>
-                  </svg>
-                {% else %}
-                  <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect x="7.4" y="7.4" width="9.2" height="9.2" rx="1.7" fill="currentColor"/>
-                  </svg>
-                {% endif %}
+                <span class="history-event-glyph">{% if is_in %}&#9654;{% else %}&#9632;{% endif %}</span>
               </span>
               <div>
                 <strong>{{ row.label }}</strong>
